--- a/.gitignore
+++ b/.gitignore
@@ -17,7 +17,12 @@ migrate_working_dir/
 *.ipr
 *.iws
 .idea/
-*.txt
+
+# Keystore security
+android/key.properties
+android/*.jks
+*.jks
+keystore-base64.txt
 # The .vscode folder contains launch configuration and tasks you configure in
 # VS Code which you may wish to be included in version control, so this line
 # is commented out by default.
