--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -119,7 +119,7 @@ code_quality:
     - flutter --version
     - flutter pub get
     # Setup signing keystore from GitLab CI/CD Variables (use variable names from project)
-    - echo "$KEYSTORE_BASE64" | base64 -d > android/upload-keystore.jks
+    - echo "$KEYSTORE_BASE64" | base64 -d > android/app/upload-keystore.jks
     - echo "storePassword=$KEYSTORE_PASSWORD" > android/key.properties
     - echo "keyPassword=$KEY_PASSWORD" >> android/key.properties
     - echo "keyAlias=$KEY_ALIAS" >> android/key.properties
