--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -152,28 +152,28 @@ build_aab:
 # IOS BUILD (requires macOS runner)
 # =============================
 
-build_ios:
-  image: ghcr.io/cirruslabs/flutter:${FLUTTER_VERSION}
-  stage: build
-  tags:
-    - macos
-  cache:
-    <<: *global_cache
-    policy: pull
-  before_script:
-    - export PATH="$PATH:$PUB_CACHE/bin"
-    - flutter --version
-    - flutter pub get
-    - cd ios && pod install && cd ..
-  script:
-    - flutter build ios --release --no-codesign
-  artifacts:
-    name: "ios-${CI_COMMIT_SHORT_SHA}"
-    paths:
-      - build/ios/iphoneos/Runner.app
-    expire_in: 1 month
-  rules:
-    - if: '$CI_COMMIT_BRANCH == "main"'
-      when: manual
-    - if: '$CI_COMMIT_TAG'
-      when: manual
+# build_ios:
+#   image: ghcr.io/cirruslabs/flutter:${FLUTTER_VERSION}
+#   stage: build
+#   tags:
+#     - macos
+#   cache:
+#     <<: *global_cache
+#     policy: pull
+#   before_script:
+#     - export PATH="$PATH:$PUB_CACHE/bin"
+#     - flutter --version
+#     - flutter pub get
+#     - cd ios && pod install && cd ..
+#   script:
+#     - flutter build ios --release --no-codesign
+#   artifacts:
+#     name: "ios-${CI_COMMIT_SHORT_SHA}"
+#     paths:
+#       - build/ios/iphoneos/Runner.app
+#     expire_in: 1 month
+#   rules:
+#     - if: '$CI_COMMIT_BRANCH == "main"'
+#       when: manual
+#     - if: '$CI_COMMIT_TAG'
+#       when: manual
